# YP_new_admin_panel_sprint_3

etl/postgres_to_es/: README.md  docker-entrypoint.sh  pyproject.toml
etl/postgres_to_es/src/: backoff.py  elasticsearch_loader.py  main.py  postgres_common.py  postgres_enricher.py  postgres_fetcher.py  postgres_merger.py  state.py  state_manager.py  transform.py
etl/postgres_to_es/src/config/: settings.py
